# numerical-pde-solvers

./: .gitignore  README.md
matlab/examples/gpe/: default_config.json  run_gpe_example.m
matlab/tssp/: split_step_solver.m  tssp_step.m
python/: pyproject.toml
python/examples/: __init__.py  burgers_fdm.py  burgers_weno.py  canonical_cases.py
python/src/numerical_pde/: __init__.py  analysis.py  boundary.py  grids.py  operators.py  solvers.py
tests/: conftest.py  test_canonical_cases.py  test_python_core.py  test_python_examples.py
